--- a/YizisPortolio/style.css
+++ b/YizisPortolio/style.css
@@ -1,14 +1,73 @@
 *{
-    margin: 80px;
+    margin: 0;
     box-sizing: border-box;
 }
 
 :root{
-    --colour-one: rgb(0,0,0);
-    --colour-two: rgb(80,80,80);
-    --colour-three: rgb(180,180,180);
-    --colour-four: rgb(250,250,250);
-    --border-one: solid 2px red;
+    --colour-one: #1f1f1f;
+    --colour-two: rgb(244, 239, 239);
+    --colour-three: hotpink;
+    --border-one: solid 2px rgb(99, 83, 162);
+}
+
+body{
+    font-family: 'Mulish', sans-serif;
+    background-color: var(--colour-two);
+}
+
+header{
+    position: sticky;
+    top: 0;
+    display: flex;
+    height: 5em;
+    background-color: #1f1f1f;
+    z-index: 1;
+}
+
+header h1{
+    font-family: 'DM Serif Display', serif;
+    position: absolute;
+    margin-left: 45%;
+}
+
+@media screen and (max-width: 360px){header h1{
+    font-size: 20px;
+    margin: 30px;
+    padding: 1px 1px 1px 1px;
+}
+}
+
+header nav{
+    padding: 1.5em 0em 1.5em 5em;
+    margin-left: 60%;
+}
+
+@media screen and (max-width: 360px){header nav{
+    margin: 0;
+}
+}
+
+header nav a{
+    color: hotpink;
+    text-decoration: none;
+    font-size: 1.5em;
+    margin: 2em;
+}
+
+header nav a:hover{
+    background-color: aquamarine;
+}
+
+header nav a:active{
+    background-color: pink;
+}
+
+@media screen and (max-width: 360px){header nav a{
+    font-size: 10px;
+    display: inline-block;
+    padding-left: 50px;
+    text-align: center;
+}
 }
 
 h1{
@@ -30,53 +89,133 @@ h1{
 
 h2{
     text-align: center;
-    padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-ul{
-    list-style-type: none;
-    text-align: center;
-    padding: 0;
+@media screen and (max-width: 360px){h2{
+    font-size: 15px;
+}
+}
+
+.Hey{
     font-size: 4rem;
 }
 
-ul li{
-    display: inline;
+@media screen and (max-width: 360px){.Hey{
+    font-size: 30px;
+}
 }
 
-ul li a{
-    text-decoration: none;
-    color: hotpink;
-}
-
-ul li a:hover{
-    background-color: blueviolet;
+.CS{
+    font-size: 2em;
+    padding-top: 50px;
+    padding-bottom: 600px;
 }
 
 .ProfilePic{
     position: relative;
     display: block;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
 }
+  
 
-body{
-    font-family: 'Mulish', sans-serif;
-    font-size: 1.5rem;
-    padding: 0;
+
+
+.PD{
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    font-family: 'Archivo', sans-serif;
+    font-size: 2em;
+    padding-left: 60px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
-h3{
-    font-size: 2rem;
-    padding: 0;
+@media screen and (max-width: 360px){.PD{
+    writing-mode: horizontal-tb;
+    font-size: 30px;
+    text-align: center;
+    padding-right: 50px;
+}
 }
 
-.PD_UX_1 h4{
-    padding: 0;
+.TTfile{
+    vertical-align: middle;
+    float: middle;
+    padding-left: 60px;
+}
+
+@media screen and (max-width: 360px){.TTfile{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
+}
+
+.PDTT h4{
+    vertical-align: middle;
+    float: right;
+    padding-right: 100px;
+    font-size: 1.5em;
+}
+
+@media screen and (max-width: 360px){.PDTT h4, .PDTT h5{
+    text-align: center;
+    font-size: 15px;
+    padding-left: 100px;
+    display: inline;
+}
+}
+
+.PDTT h5{
+    vertical-align: middle;
+    float: right;
+    padding-right: 150px;
+    font-size: 1em;
+}
+
+@media screen and (max-width: 360px){.PDTT h5{
+    text-align: center;
+    font-size: 10px;
+    padding-left: 150px;
+    display: inline;
+}
+}
+
+.PDTT p{
+    vertical-align: middle;
+    float: right;
+    padding-right: 100px;
+    font-size: 1.5em;
 }
 
 
+
+
+.GD{
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    font-family: 'Archivo', sans-serif;
+    font-size: 2em;
+    padding-top: 100px;
+    padding-left: 60px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+@media screen and (max-width: 360px){.GD{
+    writing-mode: horizontal-tb;
+    font-size: 30px;
+    text-align: center;
+    padding-right: 50px;
+}
+}
 
 
 
