--- a/projectstyle.css
+++ b/projectstyle.css
@@ -14,7 +14,7 @@
 
 body{
     min-height: 100vh;
-   /** background: url('img/filler.png') no-repeat; **/
+   /** background: url('yizi/img/filler.png') no-repeat; **/
     background-size: cover;
     background-position: center;
     background-color: var(--colour-two);
@@ -88,7 +88,7 @@ header nav a:active{
 }
 
 .card-img1:hover {
-    content: url("yizi/img/jttm_hover.png");
+    content: url("./img/jttm_hover.png");
     opacity: 100%;
  } 
 
@@ -102,7 +102,7 @@ header nav a:active{
 }
 
 .card-img2:hover {
-    content: url("yizi/img/hw_hover.png");
+    content: url("./img/hw_hover.png");
     opacity: 100%;
  } 
 
@@ -116,7 +116,7 @@ header nav a:active{
 }
 
 .card-img3:hover {
-    content: url("yizi/img/tnt_hover.png");
+    content: url("./img/tnt_hover.png");
     opacity: 100%;
  } 
 
@@ -130,7 +130,7 @@ header nav a:active{
 }
 
 .card-img4:hover {
-    content: url("yizi/img/paf_hover.png");
+    content: url("./img/paf_hover.png");
     opacity: 100%;
  } 
 
