--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -7,7 +7,7 @@
 
 :root{
     --colour-one: #1f1f1f;
-    --colour-two: rgb(244, 239, 239);
+    --colour-two: #FAF8F2;
     --colour-three: #4e8045;
     --border-one: solid 2px rgb(99, 83, 162);
 }
