--- a/projectstyle.css
+++ b/projectstyle.css
@@ -308,15 +308,12 @@ main > section:nth-child(14), main > section:nth-child(15), main > section:nth-c
 }
 
 
-@media screen and (max-width: 992px) {
-    body {
-      background-color: blue;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
+ @media screen and (max-width: 600px) {
     body {
       background-color: olive;
+    }
+    .header{
+        background-color: olive;
     }
   }
 
