--- a/projectstyle.css
+++ b/projectstyle.css
@@ -105,7 +105,7 @@ header nav a:active{
 }
 
 .card-img1:hover {
-    content: url("/img/jttm_hover.png");
+    content: URL("./img/jttm_hover.png");
     opacity: 100%;
  } 
 
@@ -119,7 +119,7 @@ header nav a:active{
 }
 
 .card-img2:hover {
-    content: url("/img/hw_hover.png");
+    content: URL("./img/hw_hover.png");
     opacity: 100%;
  } 
 
@@ -133,7 +133,7 @@ header nav a:active{
 }
 
 .card-img3:hover {
-    content: url("/img/tnt_hover.png");
+    content: URL("./img/tnt_hover.png");
     opacity: 100%;
  } 
 
@@ -147,7 +147,7 @@ header nav a:active{
 }
 
 .card-img4:hover {
-    content: url("/img/paf_hover.png");
+    content: URL("./img/paf_hover.png");
     opacity: 100%;
  } 
 
